--- a/less/svendeprove.less
+++ b/less/svendeprove.less
@@ -1,1 +1,161 @@
 @import "bootstrap.less";
+@import "helpers.less";
+
+@primary: #e74c3c;
+
+a {
+	color: #e74c3c;
+	&:hover {
+		text-decoration: none;
+		color: #e74c3c;
+	}
+}
+
+#header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 50px;
+	width: 100%;
+	background: rgba(0,0,0,.1);
+	z-index: 10;
+	.name {
+		color: #fff;
+		text-transform: uppercase;
+		display: block;
+		float: left;
+		font-size: 20px;
+		margin-top: 10px;
+		span {
+			color: @primary;
+			font-weight: 100;
+		}
+	}
+}
+
+#menu {
+	position: fixed;
+	height: 100%;
+	background: #000;
+	z-index: 9;
+	width: 100%;
+	text-align: center;
+	opacity: 0;
+	visibility: hidden;
+	&.open {
+		.transition(opacity .3s, visibility .3s;);
+		opacity: 1;
+		visibility: visible;
+		a {
+			.transition(top .3s);
+			top: 0;
+		}
+	}
+	a {
+		position: relative;
+		top: 50px;
+		display: block;
+		opacity: .5;
+		font-size: 4vw;
+		margin: 30px 0;
+		.transition(opacity .4s);
+		&:hover {
+			opacity: 1;
+			.transition(opacity .4s);
+		}
+	}
+	footer {
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		text-align: center;
+		a {
+			color: #fff;
+			margin: 15px;
+			font-size: 20px;
+			display: inline-block;
+		}
+	}
+}
+
+#nav-toggle {
+	float: left;
+	width: 100px;
+	height: 50px;
+	background: #333;
+	border: none;
+	margin-right: 15px;
+	span {
+		display: block;
+		width: 40px;
+		margin: 5px auto;
+		height: 2px;
+		background: #fff;
+	}
+	&:focus {
+		outline: none;
+	}
+	span {
+		.transition(all .3s);
+	}
+	&.open {
+		span {
+			.transition(all .3s);
+			&:nth-of-type(1){
+				.rotate(45deg);
+				margin-top:4px;
+			}
+			&:nth-of-type(2){
+				display:none;	
+			}
+			&:nth-of-type(3){
+				.rotate(-45deg);
+				margin-top:-7px;
+			}
+		}
+	}
+}
+
+.subject {
+	position: relative;
+	display: block;
+	padding: 18% 80px 50px 80px;
+	color: #fff;
+	width: 100%;
+	overflow: hidden;
+	h2 {
+		font-size: 60px;
+		text-transform: uppercase;
+	}
+	img {
+		left: -30px;
+		.transition(left .4s ease-in-out);
+	}
+	.background {
+		background: #000;
+	}
+	&:hover {
+		color: #fff;
+		img {
+			opacity: .9;
+			left: 0px;
+			.transition(left .4s ease-in-out);
+		}
+	}
+}
+
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) {
+
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) {
+
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) {
+
+}
