--- a/less/svendeprove.less
+++ b/less/svendeprove.less
@@ -56,7 +56,7 @@ a {
 		top: 50px;
 		display: block;
 		opacity: .5;
-		font-size: 4vw;
+		font-size: 20px;
 		margin: 30px 0;
 		.transition(opacity .4s);
 		&:hover {
@@ -71,9 +71,20 @@ a {
 		text-align: center;
 		a {
 			color: #fff;
-			margin: 15px;
-			font-size: 20px;
+			font-size: 10px;
+			margin: 15px 8px;
 			display: inline-block;
+		}
+	}
+	@media (min-width: @screen-sm-min) {
+		a {
+			font-size: 4vw;
+		}
+		footer {
+			a {
+				margin: 15px;
+				font-size: 20px;
+			}
 		}
 	}
 }
@@ -119,13 +130,31 @@ a {
 .subject {
 	position: relative;
 	display: block;
-	padding: 18% 80px 50px 80px;
+	padding: 25% 30px 30px 30px;
 	color: #fff;
 	width: 100%;
 	overflow: hidden;
+
+	&.in {
+		h2 {
+			top: 0;
+			opacity: 1;
+			.transition(all .7s);
+		}
+	}
 	h2 {
-		font-size: 60px;
+		position: relative;
+		top: 50px;
+		opacity: .1;
+		.transition(all .7s);
 		text-transform: uppercase;
+		font-size: 20px;
+	}
+	@media (min-width: @screen-sm-min) {
+		padding: 18% 80px 50px 80px;
+		h2 {
+			font-size: 60px;
+		}
 	}
 	img {
 		left: -30px;
@@ -146,9 +175,7 @@ a {
 
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) {
 
-}
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: @screen-md-min) {
